# DotnetConsumingSharedLib

./: .gitignore  Dockerfile  README.md
Dotnet/ConsoleClient/: ConsoleClient.csproj  Program.cs
Dotnet/NativeWrapper/: LibWrapper.cs  NativeWrapper.cs
Native/NativeLibrary/: CMakeLists.txt
Native/NativeLibrary/include/: NativeLibrary.h  NativeLogic.h
Native/NativeLibrary/src/: NativeLibrary.cpp  NativeLogic.cpp
Native/OtherLibrary/src/: .gitkeep
